@@ -1,6 +1,9 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - the "specification_version" configuration option now accepts
+            values without "draft" in the name, to facilitate a new naming
+            convention used for future specification versions
 
 0.550     2022-04-14 04:32:32Z
           - added 'dump' method to Result, Error and Annotation objects, for
